fixed scaling on mobile

--- a/index.scss
+++ b/index.scss
@@ -739,7 +739,7 @@ nav {
   }
 
   .table-comments {
-    margin: auto;
+    margin: 0 auto;
 
     ul.legend,
     .footnotes {
